base/src/test/resources/failure/levels/too-high.aya.txt
In file $FILE:3:8 ->

  1 | data List (A : Type 1) : Type 0
  2 |  | nil
  3 |  | cons A (List A)
              ^^

Error: The level is expected to be <= 0 but it is actually 1

1 error(s), 0 warning(s).
What are you doing?
